<resources>
    <string name="action_settings">Settings</string>
    <string name="action_add">New conversation</string>
    <string name="action_accounts">Manage accounts</string>
    <string name="action_end_conversation">End this conversation</string>
    <string name="action_contact_details">Contact details</string>
    <string name="action_secure">Secure conversation</string>
    <string name="action_add_new_account">Add new account</string>
    <string name="action_edit_contact">Edit name</string>
    <string name="action_add_phone_book">Add to address book</string>
    <string name="action_delete_contact">Delete from roster</string>
    <string name="action_block_contact">Block contact</string>
    <string name="action_unblock_contact">Unblock contact</string>
    <string name="action_block_domain">Block domain</string>
    <string name="action_unblock_domain">Unblock domain</string>
    <string name="title_activity_manage_accounts">Manage accounts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="conference_details">Group chat details</string>
    <string name="contact_details">Contact details</string>
    <string name="title_activity_sharewith">Share with conversation</string>
    <string name="title_activity_start_conversation">Start conversation</string>
    <string name="title_activity_choose_contact">Choose contact</string>
    <string name="title_activity_choose_contacts">Choose contacts</string>
    <string name="title_activity_block_list">Block list</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">1 min ago</string>
    <string name="minutes_ago">%d mins ago</string>
    <string name="x_unread_conversations">%d unread conversations</string>
    <string name="sending">sending…</string>
    <string name="message_decrypting">Decrypting message. Please wait…</string>
    <string name="pgp_message">OpenPGP encrypted message</string>
    <string name="nick_in_use">Nickname is already in use</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="moderator">Moderator</string>
    <string name="participant">Participant</string>
    <string name="visitor">Visitor</string>
    <string name="remove_contact_text">Would you like to remove %s from your roster? The conversation associated with this contact will not be removed.</string>
    <string name="block_contact_text">Would you like to block %s from sending you messages?</string>
    <string name="unblock_contact_text">Would you like to unblock %s and allow them to send you messages?</string>
    <string name="block_domain_text">Block all contacts from %s?</string>
    <string name="unblock_domain_text">Unblock all contacts from %s?</string>
    <string name="contact_blocked">Contact blocked</string>
    <string name="blocked">Blocked</string>
    <string name="remove_bookmark_text">Would you like to remove %s as a bookmark? The conversation associated with this bookmark will not be removed.</string>
    <string name="register_account">Register new account on server</string>
    <string name="change_password_on_server">Change password on server</string>
    <string name="share_with">Share with…</string>
    <string name="start_conversation">Start Conversation</string>
    <string name="invite_contact">Invite Contact</string>
    <string name="contacts">Contacts</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="crash_report_title">Pix-Art Messenger has crashed</string>
    <string name="crash_report_message">By sending in stack traces you are helping the ongoing development of Pix-Art Messenger\n<b>Warning:</b> This will use your XMPP account to send the stack trace to the developer.</string>
    <string name="send_now">Send now</string>
    <string name="send_never">Never ask again</string>
    <string name="problem_connecting_to_account">Unable to connect to account</string>
    <string name="problem_connecting_to_accounts">Unable to connect to multiple accounts</string>
    <string name="touch_to_fix">Touch here to manage your accounts</string>
    <string name="attach_file">Attach file</string>
    <string name="not_in_roster">The contact is not in your roster. Would you like to add it?</string>
    <string name="add_contact">Add contact</string>
    <string name="send_failed">delivery failed</string>
    <string name="preparing_image">Preparing image for transmission</string>
    <string name="action_clear_history">Clear history</string>
    <string name="pref_general">General</string>
    <string name="pref_attachments">Attachments</string>
    <string name="pref_notification_settings">Notification</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summary">Vibrate when a new message arrives</string>
    <string name="pref_led">LED Notification</string>
    <string name="pref_led_summary">Blink notification light when a new message arrives</string>
    <string name="pref_sound">Ringtone</string>
    <string name="pref_sound_summary">Play sound when a new message arrives</string>
    <string name="pref_send_crash">Send crash reports</string>
    <string name="pref_send_crash_summary">By sending stack traces you are helping the ongoing development of Pix-Art Messenger</string>
    <string name="pref_confirm_messages">Confirm Messages</string>
    <string name="pref_confirm_messages_summary">Let your contacts know when you have received and read their messages</string>
    <string name="pref_ui_options">UI</string>
    <string name="attach_choose_picture">Choose picture</string>
    <string name="attach_record_voice">Record voice</string>
    <string name="server_info_show_more">Server info</string>
    <string name="search">Search</string>
    <string name="pref_security_settings">Security and data protection</string>
    <string name="pref_allow_message_correction">Allow message correction</string>
    <string name="pref_allow_message_correction_summary">Allow your contacts to retroactively edit their messages</string>
    <string name="pref_expert_options">Expert settings</string>
    <string name="title_activity_about">About</string>
    <string name="pref_about_conversations_summary">Build and licensing information</string>
    <string name="title_pref_quiet_hours">Quiet Hours</string>
    <string name="title_pref_quiet_hours_start_time">Start time</string>
    <string name="title_pref_quiet_hours_end_time">End time</string>
    <string name="title_pref_enable_quiet_hours">Enable quiet hours</string>
    <string name="pref_quiet_hours_summary">Notifications will be silenced during quiet hours</string>
    <string name="pref_use_send_button_to_indicate_status">Send button indicates status</string>
    <string name="pref_use_indicate_received">Request message receipts</string>
    <string name="pref_use_indicate_received_summary">Received messages will be marked with a green tick if supported</string>
    <string name="pref_use_send_button_to_indicate_status_summary">Colorize send button to indicate contact status</string>
    <string name="pref_expert_options_other">Other</string>
    <string name="pref_autojoin">Synchronize with bookmarks</string>
    <string name="pref_autojoin_summary">Join and leave group chats according to auto-join flag in your bookmarks.</string>
    <string name="show_qr_code">Show QR code</string>
    <string name="show_block_list">Show block list</string>
    <string name="choose_file">Choose file</string>
    <string name="pref_show_dynamic_tags">Show dynamic tags</string>
    <string name="pref_show_dynamic_tags_summary">Display read-only tags underneath contacts</string>
    <string name="clear_other_devices">Clear devices</string>
    <string name="change_password">Change password</string>
    <string name="advanced_mode">Advanced mode</string>
    <string name="grant_membership">Grant member privileges</string>
    <string name="remove_membership">Revoke member privileges</string>
    <string name="grant_admin_privileges">Grant admin privileges</string>
    <string name="remove_admin_privileges">Revoke admin privileges</string>
    <string name="kick_from_room">Kick from group chat</string>
    <string name="ban_from_conference">Ban from group chat</string>
    <string name="pref_input_options">Input</string>
    <string name="pref_enter_is_send">Enter is send</string>
    <string name="pref_enter_is_send_summary">Use enter key to send message</string>
    <string name="pref_display_enter_key">Show enter key</string>
    <string name="pref_display_enter_key_summary">Change the emoticons key to an enter key</string>
    <string name="pref_chat_states">Typing notifications</string>
    <string name="pref_chat_states_summary">Let your contacts know when you are writing messages to them</string>
    <string name="send_location">Send location</string>
    <string name="pref_dont_trust_system_cas_title">Don’t trust system CAs</string>
    <string name="pref_dont_trust_system_cas_summary">All certificates must be manually approved</string>
    <string name="pref_remove_trusted_certificates_title">Remove certificates</string>
    <string name="pref_remove_trusted_certificates_summary">Delete manually approved certificates</string>
    <string name="pref_quick_action_summary">Replace send button with quick action</string>
    <string name="pref_quick_action">Quick Action</string>
    <string name="choose_quick_action">Choose quick action</string>
    <string name="send_private_message">Send private message</string>
    <string name="action_check_update">Check for Updates</string>
    <string name="pref_presence_settings">Availability</string>
    <string name="pref_away_when_screen_off">Away when screen is off</string>
    <string name="pref_away_when_screen_off_summary">Marks your resource as away when the screen is turned off</string>
    <string name="pref_treat_vibrate_as_silent">Treat vibrate as silent mode</string>
    <string name="mam_prefs">Archiving preferences</string>
    <string name="action_renew_certificate">Renew certificate</string>
    <string name="share_uri_with">Share URI with…</string>
    <string name="mgmt_account_reconnect">Reconnect</string>
    <string name="pref_manually_change_presence">Manage availability manually</string>
    <string name="pref_manually_change_presence_summary">Set your availability when editing your status message.</string>
    <string name="action_end_conversation_muc">Leave group chat</string>
    <string name="show_password">Show password</string>
    <string name="invite_again">Invite again</string>
    <string name="pref_broadcast_last_activity">Broadcast Last User Interaction</string>
    <string name="pref_broadcast_last_activity_summary">Let all your contacts know when use Pix-Art Messenger</string>
    <string name="invite_user">Invite to Pix-Art Messenger</string>
    <string name="pref_export_plain_text_logs_summary">Enable an export of chat logs as human readable text files</string>
    <string name="pref_export_plain_text_logs">Export human readable chat logs</string>
    <string name="create_issue">Report an issue</string>
    <string name="share_as_uri">Share as XMPP URI</string>
    <string name="share_as_http">Share as HTTP link</string>
    <string name="action_take_photo">Take photo</string>
    <string name="action_take_video">Record video</string>
    <string name="highlight_in_muc">highlight user</string>
    <string name="grant_owner_privileges">Grant owner privileges</string>
    <string name="remove_owner_privileges">Revoke owner privileges</string>
    <string name="manage_permission">Manage privileges</string>
</resources>