<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--UI-->
    <PreferenceScreen
        android:icon="@drawable/ic_image_black_24dp"
        android:key="userinterface"
        android:title="@string/pref_ui_options">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="use_white_background"
            android:summary="@string/pref_use_white_background_summary"
            android:title="@string/pref_use_white_background" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="use_larger_font"
            android:summary="@string/pref_use_larger_font_summary"
            android:title="@string/pref_use_larger_font" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="send_button_status"
            android:summary="@string/pref_use_send_button_to_indicate_status_summary"
            android:title="@string/pref_use_send_button_to_indicate_status" />
        <ListPreference
            android:defaultValue="voice"
            android:dialogTitle="@string/choose_quick_action"
            android:entries="@array/quick_actions"
            android:entryValues="@array/quick_action_values"
            android:key="quick_action"
            android:summary="@string/pref_quick_action_summary"
            android:title="@string/pref_quick_action" />
    </PreferenceScreen>
    <!--Notifications-->
    <PreferenceScreen
        android:icon="@drawable/ic_notifications_black_24dp"
        android:key="notifications"
        android:title="@string/pref_notification_settings">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_notification"
            android:summary="@string/pref_notifications_summary"
            android:title="@string/pref_notifications" />
        <PreferenceScreen
            android:dependency="show_notification"
            android:key="quiet_hours"
            android:summary="@string/pref_quiet_hours_summary"
            android:title="@string/title_pref_quiet_hours">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="enable_quiet_hours"
                android:summary="@string/pref_quiet_hours_summary"
                android:title="@string/title_pref_enable_quiet_hours" />
            <de.pixart.messenger.ui.TimePreference
                android:dependency="enable_quiet_hours"
                android:key="quiet_hours_start"
                android:negativeButtonText="@string/cancel"
                android:positiveButtonText="@string/set"
                android:title="@string/title_pref_quiet_hours_start_time" />
            <de.pixart.messenger.ui.TimePreference
                android:dependency="enable_quiet_hours"
                android:key="quiet_hours_end"
                android:negativeButtonText="@string/cancel"
                android:positiveButtonText="@string/set"
                android:title="@string/title_pref_quiet_hours_end_time" />
        </PreferenceScreen>
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="show_notification"
            android:key="vibrate_on_notification"
            android:summary="@string/pref_vibrate_summary"
            android:title="@string/pref_vibrate" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="show_notification"
            android:key="led"
            android:summary="@string/pref_led_summary"
            android:title="@string/pref_led" />
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="show_notification"
            android:key="notification_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/pref_sound_summary"
            android:title="@string/pref_sound" />
    </PreferenceScreen>
    <!--Attachments-->
    <PreferenceScreen
        android:icon="@drawable/ic_attachment_black_24dp"
        android:key="attachments"
        android:title="@string/pref_attachments">
        <ListPreference
            android:defaultValue="1048576"
            android:entries="@array/filesizes"
            android:entryValues="@array/filesizes_values"
            android:key="auto_accept_file_size"
            android:summary="@string/pref_accept_files_summary"
            android:title="@string/pref_accept_files" />
        <ListPreference
            android:defaultValue="auto"
            android:entries="@array/picture_compression_entries"
            android:entryValues="@array/picture_compression_values"
            android:key="picture_compression"
            android:summary="@string/pref_picture_compression_summary"
            android:title="@string/pref_picture_compression" />
    </PreferenceScreen>
    <!--status-->
    <PreferenceScreen
        android:icon="@drawable/ic_new_releases_black_24dp"
        android:key="presence"
        android:title="@string/pref_presence_settings">
        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="manually_change_presence"
            android:summary="@string/pref_manually_change_presence_summary"
            android:title="@string/pref_manually_change_presence" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="manually_change_presence"
            android:key="away_when_screen_off"
            android:summary="@string/pref_away_when_screen_off_summary"
            android:title="@string/pref_away_when_screen_off" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="manually_change_presence"
            android:key="xa_on_silent_mode"
            android:summary="@string/pref_xa_on_silent_mode_summary"
            android:title="@string/pref_xa_on_silent_mode" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="xa_on_silent_mode"
            android:key="treat_vibrate_as_silent"
            android:summary="@string/pref_treat_vibrate_as_silent_summary"
            android:title="@string/pref_treat_vibrate_as_silent" />
    </PreferenceScreen>
    <!--Security-->
    <PreferenceScreen
        android:icon="@drawable/ic_security_black_24dp"
        android:key="security"
        android:title="@string/pref_security_settings">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="grant_new_contacts"
            android:summary="@string/pref_grant_presence_updates_summary"
            android:title="@string/pref_grant_presence_updates" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="confirm_messages"
            android:summary="@string/pref_confirm_messages_summary"
            android:title="@string/pref_confirm_messages" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="chat_states"
            android:summary="@string/pref_chat_states_summary"
            android:title="@string/pref_chat_states" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="allow_message_correction"
            android:summary="@string/pref_allow_message_correction_summary"
            android:title="@string/pref_allow_message_correction" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="indicate_received"
            android:summary="@string/pref_use_indicate_received_summary"
            android:title="@string/pref_use_indicate_received" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="last_activity"
            android:title="@string/pref_broadcast_last_activity"
            android:summary="@string/pref_broadcast_last_activity_summary"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="crashreport"
            android:summary="@string/pref_send_crash_summary"
            android:title="@string/pref_send_crash" />
        <PreferenceCategory android:title="@string/pref_export_logs">
            <de.pixart.messenger.ui.ExportLogsPreference
                android:key="export_logs"
                android:summary="@string/pref_export_logs_summary"
                android:title="@string/pref_export_logs" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="export_plain_text_logs"
                android:summary="@string/pref_export_plain_text_logs_summary"
                android:title="@string/pref_export_plain_text_logs" />
        </PreferenceCategory>
    </PreferenceScreen>
    <!--Expert-->
    <PreferenceScreen
        android:icon="@drawable/ic_settings_black_24dp"
        android:key="expert"
        android:title="@string/pref_expert_options">
        <PreferenceCategory android:title="@string/pref_general">
            <ListPreference
                android:defaultValue="Mobile"
                android:entries="@array/resources"
                android:entryValues="@array/resources"
                android:key="resource"
                android:summary="@string/pref_xmpp_resource_summary"
                android:title="@string/pref_xmpp_resource" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/pref_ui_options">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="show_dynamic_tags"
                android:summary="@string/pref_show_dynamic_tags_summary"
                android:title="@string/pref_show_dynamic_tags" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/pref_security_settings">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="dont_save_encrypted"
                android:summary="@string/pref_dont_save_encrypted_summary"
                android:title="@string/pref_dont_save_encrypted" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="dont_trust_system_cas"
                android:summary="@string/pref_dont_trust_system_cas_summary"
                android:title="@string/pref_dont_trust_system_cas_title" />
            <Preference
                android:key="remove_trusted_certificates"
                android:summary="@string/pref_remove_trusted_certificates_summary"
                android:title="@string/pref_remove_trusted_certificates_title" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/pref_input_options">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="enter_is_send"
                android:summary="@string/pref_enter_is_send_summary"
                android:title="@string/pref_enter_is_send" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="display_enter_key"
                android:summary="@string/pref_display_enter_key_summary"
                android:title="@string/pref_display_enter_key" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/pref_expert_options_other">
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="autojoin"
                android:summary="@string/pref_autojoin_summary"
                android:title="@string/pref_autojoin" />
        </PreferenceCategory>
    </PreferenceScreen>
    <!--About-->
    <de.pixart.messenger.ui.AboutPreference
        android:icon="@drawable/ic_help_black_24dp"
        android:summary="@string/pref_about_conversations_summary"
        android:title="@string/title_activity_about" />
    
</PreferenceScreen>
