<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/attach_choose_file"
        android:icon="?attr/ic_attach_document"
        android:title="@string/choose_file" />

    <item
        android:id="@+id/attach_choose_picture"
        android:icon="?attr/ic_attach_photo"
        android:title="@string/attach_choose_picture" />

    <item
        android:id="@+id/attach_take_picture"
        android:icon="?attr/ic_attach_camera"
        android:title="@string/action_take_photo" />

    <item
        android:id="@+id/attach_record_video"
        android:icon="?attr/ic_attach_videocam"
        android:title="@string/action_take_video" />
    <item
        android:id="@+id/attach_record_voice"
        android:icon="?attr/ic_attach_record"
        android:title="@string/attach_record_voice" />

    <item
        android:id="@+id/attach_location"
        android:icon="?attr/ic_attach_location"
        android:title="@string/send_location" />
</menu>
