<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_subject"
        android:icon="?attr/icon_edit"
        android:orderInCategory="10"
        android:title="@string/action_edit_subject"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:icon="?attr/icon_share"
        android:orderInCategory="15"
        android:title="@string/share_uri_with"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_share_uri"
                android:title="@string/share_as_uri" />
            <item
                android:id="@+id/action_share_http"
                android:title="@string/share_as_http" />
            <item
                android:id="@+id/action_show_qr_code"
                android:title="@string/show_qr_code" />
        </menu>
    </item>
    <item
        android:id="@+id/action_advanced_mode"
        android:checkable="true"
        android:checked="false"
        android:orderInCategory="85"
        android:title="@string/advanced_mode"
        app:showAsAction="never" />
</menu>